v10/docs/ModelsTemplateRetrievalResponseTemplateRegexModel.md
# ModelsTemplateRetrievalResponseTemplateRegexModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**TemplateId** | Pointer to **NullableInt64** |  | [optional] 
**SubjectPart** | Pointer to **string** |  | [optional] 
**Regex** | Pointer to **string** |  | [optional] 
**Error** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsTemplateRetrievalResponseTemplateRegexModel

`func NewModelsTemplateRetrievalResponseTemplateRegexModel() *ModelsTemplateRetrievalResponseTemplateRegexModel`

NewModelsTemplateRetrievalResponseTemplateRegexModel instantiates a new ModelsTemplateRetrievalResponseTemplateRegexModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsTemplateRetrievalResponseTemplateRegexModelWithDefaults

`func NewModelsTemplateRetrievalResponseTemplateRegexModelWithDefaults() *ModelsTemplateRetrievalResponseTemplateRegexModel`

NewModelsTemplateRetrievalResponseTemplateRegexModelWithDefaults instantiates a new ModelsTemplateRetrievalResponseTemplateRegexModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetTemplateId

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) GetTemplateId() int64`

GetTemplateId returns the TemplateId field if non-nil, zero value otherwise.

### GetTemplateIdOk

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) GetTemplateIdOk() (*int64, bool)`

GetTemplateIdOk returns a tuple with the TemplateId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetTemplateId

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) SetTemplateId(v int64)`

SetTemplateId sets TemplateId field to given value.

### HasTemplateId

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) HasTemplateId() bool`

HasTemplateId returns a boolean if a field has been set.

### SetTemplateIdNil

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) SetTemplateIdNil(b bool)`

 SetTemplateIdNil sets the value for TemplateId to be an explicit nil

### UnsetTemplateId
`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) UnsetTemplateId()`

UnsetTemplateId ensures that no value is present for TemplateId, not even an explicit nil
### GetSubjectPart

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) GetSubjectPart() string`

GetSubjectPart returns the SubjectPart field if non-nil, zero value otherwise.

### GetSubjectPartOk

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) GetSubjectPartOk() (*string, bool)`

GetSubjectPartOk returns a tuple with the SubjectPart field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetSubjectPart

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) SetSubjectPart(v string)`

SetSubjectPart sets SubjectPart field to given value.

### HasSubjectPart

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) HasSubjectPart() bool`

HasSubjectPart returns a boolean if a field has been set.

### GetRegex

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) GetRegex() string`

GetRegex returns the Regex field if non-nil, zero value otherwise.

### GetRegexOk

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) GetRegexOk() (*string, bool)`

GetRegexOk returns a tuple with the Regex field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetRegex

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) SetRegex(v string)`

SetRegex sets Regex field to given value.

### HasRegex

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) HasRegex() bool`

HasRegex returns a boolean if a field has been set.

### GetError

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) GetError() string`

GetError returns the Error field if non-nil, zero value otherwise.

### GetErrorOk

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) GetErrorOk() (*string, bool)`

GetErrorOk returns a tuple with the Error field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetError

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) SetError(v string)`

SetError sets Error field to given value.

### HasError

`func (o *ModelsTemplateRetrievalResponseTemplateRegexModel) HasError() bool`

HasError returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


